--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/preset-env": "^7.15.4",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.2.0",
+    "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^2.2.2",
     "node-sass": "^6.0.1",
     "sass-loader": "^12.1.0",
